modified:   backupgallery.html 	modified:   blog.html 	new file:   images/daraetanvid.mp4 	new file:   images/pulagvid.mp4 	new file:   images/pulagvid2.mp4 	modified:   post5.html

--- a/backupgallery.html
+++ b/backupgallery.html
@@ -86,17 +86,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/181.webp"
+              src="images/daraitan.jpg" 
+              style="height: 200px;"
               class="card-img-top"
               alt="Waterfall"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Batlag Falls</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                Thousands of hikers, tourists, and adventure seekers flock to the lovely hiking paths of Mt. Daraitan each week, quickly establishing itself as one of the most popular hiking destinations in the Philippines.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post5.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -104,17 +104,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4 d-none d-lg-block">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp"
+              src="images/pulag1.png"
+              style="height: 200px;"
               class="card-img-top"
               alt="Sunset Over the Sea"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Mount Pulag</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                The pine forest below is situated on steep, arid hills. The region is marked by falls, rivers, and little lakes.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post4.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -122,17 +122,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4 d-none d-lg-block">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/183.webp"
+              src="media/palawan2.jpg"
+              style="height: 200px;"
               class="card-img-top"
               alt="Sunset over the Sea"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Puerto Princesa Palawan</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                Palawan is a slice of heaven, a sliver of an island that teems with exotic wildlife, quaint fishing villages, and UNESCO World Heritage Sites. Wave hello to endangered animals at the Calauit Game Preserve and Wildlife Sanctuary or explore the Japanese shipwrecks of Coron Island, regarded as one of the best dive sites in the world. A guided boat tour of the Puerto Princesa Underground River will take your breath away.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post3.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -147,17 +147,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4 col-md-12">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/184.webp"
+              src="images/gigantes5.jpg"
+              style="height: 200px;"
               class="card-img-top"
               alt="Fissure in Sandstone"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Islas De Gigantes</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                Gigantes, informally referred to as the capital of scallops in the Philippines, offers affordable and fresh seafood. In addition, the islands are renowned for their peculiarly formed Wasay-wasay shells and profusion of fish, squid, crabs, and shrimp, among other aquatic delicacies. Seafood is more reasonably priced here and in Estancia than in the towns of Roxas and Iloilo, and it is unquestionably far less expensive than in Manila or Boracay.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post6.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -165,17 +165,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4 d-none d-lg-block">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/185.webp"
+              src="media/palawan2.jpg"
+              style="height: 200px;"
               class="card-img-top"
               alt="Storm Clouds"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Puerto Princesa</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                The province was also categorized as "doing well" in the 4th Destination Scorecard survey conducted by the National Geographic Center for Sustainable Destinations, and Conde Nast Traveler magazine voted its beaches, coves and islets as the tourist destination with the best beaches in Asia. Renowned underwater explorer Jacques Cousteau has described the province as having one of the most beautiful seascapes in the world and Caril Ridley, founder of Palawan Environmental and Marine Studies Center (PEMS) says the Islands of northern Palawan are destined to become a future destination for Asia's growing economic and environmental conferencing. In 2007, a "shrew-eating pitcher plant", named Nepenthes attenboroughii was discovered in Mount Victoria. There were many species of pitcher plants discovered in this wild mountain paradise, the most recent is named Nepenthes leonardoi. In 2012, the purple crab was discovered here along with four other species
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post3.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -183,17 +183,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4 d-none d-lg-block">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/186.webp"
+              src="images/pulag7.jpg"
+              style="height: 200px;"
               class="card-img-top"
               alt="Hot Air Balloons"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Mt. Pulag National Park</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                The peak of Mount Pulag is covered in grass and little bamboo trees. Lower on the mountain, a mossy woodland covered in fog and brimming with ferns, lichens, and moss may be found. The pine forest below is situated on steep, arid hills. The region is marked by falls, rivers, and little lakes.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post4.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -208,17 +208,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/187.webp"
+              src="images/gigantes2.jpg"
+              style="height: 200px;"
               class="card-img-top"
               alt="Peaks Against the Starry Sky"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Islas De Gigantes</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                Without going on an island hopping excursion to explore its beautiful beaches and islands, a trip to Gigantes is not complete. At least a half-day is required to see the major attractions, which include Cabugao Dako Island, Bantigue Island, where the Bantigue sandbar is situated, Antonia Beach, Cabugao Gamay Island, Tangke Lagoon, Gigantes Norte Island, likewise Pawikan Cave.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post6.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -226,17 +226,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/188.webp"
+              src="media/dahican.png"
+              style="height: 200px;"
               class="card-img-top"
               alt="Bridge Over Water"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Dahican Beach</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                Dubbed as the "Surfing Mecca" of Davao Region, the strong waves, towering to about 10 feet, that hit the shoreline of the beach, are just about the perfect kind of waves surf and skimboard aficionados are looking for - moderately strong but not too much. The cold wintry breeze dominates the season in Dahican beginning sometime in September or October and ends sometime in May or June, during which the waves for surfing and skimming are at its peak. Although the waves and currents can be strong and treacherous during the monsoon months, Dahican Beach is still a perfect spot for skimboarding.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -244,17 +244,17 @@ data-bs-ride="carousel"
         <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
           <div class="card">
             <img
-              src="https://mdbcdn.b-cdn.net/img/new/standard/nature/189.webp"
+              src="media/apo4.png"
+              style="height: 200px;"
               class="card-img-top"
               alt="Purbeck Heritage Coast"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Mt. Apo National Park</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk
-                of the card's content.
+                There are falconet, mynah, Philippine eagle (Philippine National Bird), white-browed shortwing, the Philippine trogon, the yellow-bellied whistler, the island flycatcher, and little pied flychatcher which can also be found in some parts of Luzon and in Palawan. Also seen in the area are birds that exist in the highlands of Luzon such as strong-billed shrike, strong-billed shrike, the Philippine bullfinch, skull of white-cheeked bullfinch. The presence of firecrest , snowy-browed flychatcher, black-and cinnamon fantail and cinnamon Ibon were also noted in the primary forest area.
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <a href="post3.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
         </div>
@@ -262,6 +262,16 @@ data-bs-ride="carousel"
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
 <!-- Inner -->
 </div>
 <!-- Carousel wrapper -->
@@ -319,6 +329,14 @@ data-bs-ride="carousel"
     </section>
     <!-- Section: Images -->
   
+
+
+
+
+
+
+
+
     <!-- Section: Modals -->
     <section class="">
       <!-- Modal 1 -->
@@ -333,7 +351,7 @@ data-bs-ride="carousel"
           <div class="modal-content">
             <div class="ratio ratio-16x9">
               <iframe
-                src="https://www.youtube.com/embed/A3PDXmYoF5U"
+                src=""
                 title="YouTube video"
                 allowfullscreen
               ></iframe>
