--- a/blog.html
+++ b/blog.html
@@ -45,86 +45,222 @@
       </div>
       </section>
 
-      <section id="blog-list">
-        <div class="grid_post_container">
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post.html">SEE BLOG</a>
-            <div class="image1"></div>
-            <div class="post-card__details">
-              <h2><a href="post.html">Dahican Beach in Mati, Davao Oriental </a></h2>
-              <p>It’s so easy to fall in love with Dahican! A 7-km stretch of open beach surrounded by tall coconut trees, fine sand, and powerful waves, Mati’s best-kept secret is not much of a secret anymore. Popular with surfers, skimboarders and plain beach enthusiasts alike, who continuously flock to the crescent-shapeds</p><a class="post-card__avatar" href="post.html">
-                <div class>
-                  <img src="profile.jpg" height="50" width="50" class="rounded-circle">
-                </div>
-                <div class="avatar__name">Yza Grace D.</div>
-                <div class="avatar__muted-line"></div></a>
+           <!-- Carousel wrapper -->
+<div
+id="carouselMultiItemExample"
+class="carousel slide carousel-dark text-center"
+data-bs-ride="carousel"
+>
+<!-- Controls -->
+<div class="d-flex justify-content-center mb-4">
+  <button
+    class="carousel-control-prev position-relative"
+    type="button"
+    data-bs-target="#carouselMultiItemExample"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next position-relative"
+    type="button"
+    data-bs-target="#carouselMultiItemExample"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<!-- Inner -->
+<div class="carousel-inner py-4">
+  <!-- Single item -->
+  <div class="carousel-item active">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="card">
+            <img
+              src="images/daraitan.jpg" 
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Waterfall"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Batlag Falls</h5>
+              <p class="card-text">
+                Thousands of hikers, tourists, and adventure seekers flock to the lovely hiking paths of Mt. Daraitan each week, quickly establishing itself as one of the most popular hiking destinations in the Philippines.
+              Splash in the waterfalls and fall in love to it's majestic beauty. Feel the breezy, cold waters that showers you along with the joy it brings. Revive your happy thoughts and stress-relieving calmness it can give you.</p>
+              <a href="post5.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post2.html">SEE BLOG</a>
-            <div class="image2"></div>
-            <div class="post-card__details">
-              <h2><a href="post2.html">Famous Mt. Apo National Park </a></h2>
-              <p>Mt Apo National Park has a total area of 72,113 ha and towering at the height of 2,954 m that makes it the highest peak of the country. It was declared as a National Park in 1936.This dormant volcano is situated between the province of Davao del Sur and Northern Cotabato, </p><a class="post-card__avatar" href="post.html">
-                <div class>
-                  <img src="profile.jpg" height="50" width="50" class="rounded-circle">
-                </div>
-                <div class="avatar__name">Yza Grace D.</div>
-                <div class="avatar__muted-line"></div></a>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post3.html">SEE BLOG</a>
-            <div class="image3"></div>
-            <div class="post-card__details">
-              <h2><a href="post3.html">Puerto Princesa in Palawan Island </a></h2>
-              <p>Palawan is a slice of heaven, a sliver of an island that teems with exotic wildlife, quaint fishing villages, and UNESCO World Heritage Sites. Wave hello to endangered animals at the Calauit Game Preserve and Wildlife Sanctuary or explore the Japanese shipwrecks of Coron Island,</p><a class="post-card__avatar" href="post.html">
-                <div class>
-                  <img src="profile.jpg" height="50" width="50" class="rounded-circle">
-                </div>
-                <div class="avatar__name">Yza Grace D.</div>
-                <div class="avatar__muted-line"></div></a>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post4.html">SEE BLOG</a>
-            <div class="image4"></div>
-            <div class="post-card__details">
-              <h2><a href="post4.html">Mt. Pulag National Park -Benguet</a></h2>
-              <p>The second tallest mountain in the Philippines and the highest point on Luzon is Mt. Pulag National Park, which rises to a height of 2,922 meters above the sea. The entire park is extremely rocky, with steep to extremely steep slopes at the mountain sides and generally rolling terrain at the mountain peak. It is part of the Philippine Cordillera Mountain Chain.  </p><a class="post-card__avatar" href="post4.html">
-                <div class>
-                  <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
-                </div>
-                <div class="avatar__name">Jennifer Pajalla-Bravo</div>
-                <div class="avatar__muted-line"></div></a>
-            </div>
-          </div>
+        </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post5.html">SEE BLOG</a>
-            <div class="image5"></div>
-            <div class="post-card__details">
-              <h2><a href="post5.html">Mt. Daraitan Adventure Camp </a></h2>
-              <p>In Tanay, Rizal, a neighborhood called Daraitan is tucked away among the Sierra Madre Mountain Range. In the middle of the mountain, there lies a calm and tranquil village. The 3,150 residents of the mountain barangay still maintain the characteristics of a traditional barrios: car-free streets, donkeys hauling cargo, roosters serving as the bariago's alarm clock.</p><a class="post-card__avatar" href="post5.html">
-                <div class>
-                  <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
-                </div>
-                <div class="avatar__name">Jennifer Pajalla-Bravo</div>
-                <div class="avatar__muted-line"></div></a>
+        <div class="col-lg-4 d-none d-lg-block">
+          <div class="card">
+            <img
+              src="images/pulag1.png"
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Sunset Over the Sea"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Mount Pulag</h5>
+              <p class="card-text">
+                The pine forest below is situated on steep, arid hills. The region is marked by falls, rivers, and little lakes.
+              The most amazing beauty are flushing right before your eyes as if you are in a different dimension in this vast universe. Cherish all the greatness, endulge in the most abundant colors, the white clouds, the green grass, the brown up and down hills. All amazing, greatest nature experience.</p>
+              <a href="post4.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
+        </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post6.html">SEE BLOG</a>
-            <div class="image6"></div>
-            <div class="post-card__details">
-              <h2><a href="post6.html">The Islas De Gigantes – Carles, Iloilo </a></h2>
-              <p>The name of a tree species native to the islands, Sabuluag or Salauag, was once used to refer to the Gigantes group. The name was changed to Gigantes at the time of Spanish colonization. According to a local tale, enormous sets of human bones were discovered within coffins inside Bakwitan Cave, which led to the name change. Residents also think engkantos live on the island. </p><a class="post-card__avatar" href="post6.html">
-                <div class>
-                  <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
-                </div>
-                <div class="avatar__name">Jennifer Pajalla-Bravo</div>
-                <div class="avatar__muted-line"></div></a>
+        <div class="col-lg-4 d-none d-lg-block">
+          <div class="card">
+            <img
+              src="media/palawan2.jpg"
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Sunset over the Sea"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Puerto Princesa Palawan</h5>
+              <p class="card-text">
+                Palawan is a slice of heaven, a sliver of an island that teems with exotic wildlife, quaint fishing villages, and UNESCO World Heritage Sites. Wave hello to endangered animals at the Calauit Game Preserve and Wildlife Sanctuary or explore the Japanese shipwrecks of Coron Island, regarded as one of the best dive sites in the world. A guided boat tour of the Puerto Princesa Underground River will take your breath away.
+              </p>
+              <a href="post3.html" class="btn btn-primary">See Full Blog</a>
             </div>
           </div>
+        </div>
       </div>
-      <input type="button" class="btn btn-outline-success me-2" value="Back" onclick="goBack()">
-      </section>
     </div>
+  </div>
+
+  <!-- Single item -->
+  <div class="carousel-item">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-12">
+          <div class="card">
+            <img
+              src="images/gigantes5.jpg"
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Fissure in Sandstone"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Islas De Gigantes</h5>
+              <p class="card-text">
+                Gigantes, informally referred to as the capital of scallops in the Philippines, offers affordable and fresh seafood. In addition, the islands are renowned for their peculiarly formed Wasay-wasay shells and profusion of fish, squid, crabs, and shrimp, among other aquatic delicacies. Seafood is more reasonably priced here and in Estancia than in the towns of Roxas and Iloilo, and it is unquestionably far less expensive than in Manila or Boracay.
+              </p>
+              <a href="post6.html" class="btn btn-primary">See Full Blog</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 d-none d-lg-block">
+          <div class="card">
+            <img
+              src="media/palawan2.jpg"
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Storm Clouds"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Puerto Princesa</h5>
+              <p class="card-text">
+                The province was also categorized as "doing well" in the 4th Destination Scorecard survey conducted by the National Geographic Center for Sustainable Destinations, and Conde Nast Traveler magazine voted its beaches, coves and islets as the tourist destination with the best beaches in Asia. Renowned underwater explorer Jacques Cousteau has described the province as having the most beautiful seascapes in the world.
+              </p>
+              <a href="post3.html" class="btn btn-primary">See Full Blog</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 d-none d-lg-block">
+          <div class="card">
+            <img
+              src="images/pulag7.jpg"
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Hot Air Balloons"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Mt. Pulag National Park</h5>
+              <p class="card-text">
+                The peak of Mount Pulag is covered in grass and little bamboo trees. Lower on the mountain, a mossy woodland covered in fog and brimming with ferns, lichens, and moss may be found. The pine forest below is situated on steep, arid hills. The region is marked by falls, rivers, and little lakes.
+              And nothing beats the mossy forest, that it feels like in a fantasy world with you as the main character.</p>
+              <a href="post4.html" class="btn btn-primary">See Full Blog</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Single item -->
+  <div class="carousel-item">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+          <div class="card">
+            <img
+              src="images/gigantes2.jpg"
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Peaks Against the Starry Sky"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Islas De Gigantes</h5>
+              <p class="card-text">
+                Without going on an island hopping excursion to explore its beautiful beaches and islands, a trip to Gigantes is not complete. At least a half-day is required to see the major attractions, which include Cabugao Dako Island, Bantigue Island, where the Bantigue sandbar is situated, Antonia Beach, Cabugao Gamay Island, Tangke Lagoon, Gigantes Norte Island, likewise Pawikan Cave.
+              You can't get enough of its beautiful astonishing views, what a wonderful world you're in. Such a lucky country we have, full of gems to explore. Experience this wonderful beach destination and warm people in it.</p>
+              <a href="post6.html" class="btn btn-primary">See Full Blog</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
+          <div class="card">
+            <img
+              src="media/dahican.png"
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Bridge Over Water"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Dahican Beach</h5>
+              <p class="card-text">
+                Dubbed as the "Surfing Mecca" of Davao Region, the strong waves, towering to about 10 feet, that hit the shoreline of the beach, are just about the perfect kind of waves surf and skimboard aficionados are looking for - moderately strong but not too much. The cold wintry breeze dominates the season in Dahican beginning sometime in September or October and ends sometime in May or June, during which the waves for surfing and skimming are at its peak. Although the waves and currents can be strong and treacherous during the monsoon months, Dahican Beach is still a perfect spot for skimboarding.
+              </p>
+              <a href="post.html" class="btn btn-primary">See Full Blog</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
+          <div class="card">
+            <img
+              src="media/apo4.png"
+              style="height: 200px;"
+              class="card-img-top"
+              alt="Purbeck Heritage Coast"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Mt. Apo National Park</h5>
+              <p class="card-text">
+                There are falconet, mynah, Philippine eagle (Philippine National Bird), white-browed shortwing, the Philippine trogon, the yellow-bellied whistler, the island flycatcher, and little pied flychatcher which can also be found in some parts of Luzon and in Palawan. Also seen in the area are birds that exist in the highlands of Luzon such as strong-billed shrike, strong-billed shrike, the Philippine bullfinch, skull of white-cheeked bullfinch. The presence of firecrest , snowy-browed flychatcher, black-and cinnamon fantail and cinnamon Ibon were also noted in the primary forest area.
+              </p>
+              <a href="post3.html" class="btn btn-primary">See Full Blog</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+      </div>
+      </section> 
+      </div>
+    <input type="button" class="btn btn-outline-success me-2" value="Back" onclick="goBack()">
     <footer>
       <div class="container_wrapper">
         <div id="footer__site_description">
