--- a/post5.html
+++ b/post5.html
@@ -64,7 +64,7 @@
       </section>
       <section id="post-content">
         <div class="post__content">
-          <p1> One of the most visited park in the country </p1>
+          <p1> One of the most visited hiking spot in the country. </p1>
           <p1><a href="#">MT. DARAITAN AND TINIPAK RIVER  | TANAY, RIZAL </a></p1>
           <h2>Why do we travel Mt. Daraitan Adventure Camp?</h2>
           <p1>I've witnessed this type of free-flowing river and am undoubtedly engrossed in the beauty of nature. As we walked ahead, we noticed many people bathing in the clean river. The water is also crystal pure and encircled by large marble pebbles. Awe-inspiring to see with my own eyes are the clear waters of Tinipak River, gorgeous white limestone rocks, and mountain cliffs that surround it. We take a little break outside the Tinipak Cave after our hall of fame stroll to the Tinipak River.
