modified:   blog.html

--- a/blog.html
+++ b/blog.html
@@ -229,7 +229,7 @@ data-bs-ride="carousel"
             <div class="card-body">
               <h5 class="card-title">Dahican Beach</h5>
               <p class="card-text">
-                Dubbed as the "Surfing Mecca" of Davao Region, the strong waves, towering to about 10 feet, that hit the shoreline of the beach, are just about the perfect kind of waves surf and skimboard aficionados are looking for - moderately strong but not too much. The cold wintry breeze dominates the season in Dahican beginning sometime in September or October and ends sometime in May or June, during which the waves for surfing and skimming are at its peak. Although the waves and currents can be strong and treacherous during the monsoon months, Dahican Beach is still a perfect spot for skimboarding.
+                Dubbed as the "Surfing Mecca" of Davao Region, the strong waves, towering to about 10 feet, that hit the shoreline of the beach, are just about the perfect kind of waves surf and skimboard aficionados are looking for - moderately strong but not too much. The cold wintry breeze dominates the season in Dahican beginning sometime in September or October and ends sometime in May or June, during which the waves for surfing and skimming are at its peak. Although the waves and currents can be strong and treacherous during the monsoon months, it is still a perfect spot for skimboarding.
               </p>
               <a href="post.html" class="btn btn-primary">See Full Blog</a>
             </div>
