modified:   blog.html 	modified:   script.min.js

--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@ data-bs-ride="carousel"
               src="images/pulag1.png"
               style="height: 200px;"
               class="card-img-top"
-              alt="Sunset Over the Sea"
+              alt="Sea of Clouds"
             />
             <div class="card-body">
               <h5 class="card-title">Mount Pulag</h5>
@@ -117,7 +117,7 @@ data-bs-ride="carousel"
         <div class="col-lg-4 d-none d-lg-block">
           <div class="card">
             <img
-              src="media/palawan2.jpg"
+              src="media/palawan3.jpg"
               style="height: 200px;"
               class="card-img-top"
               alt="Sunset over the Sea"
@@ -163,7 +163,7 @@ data-bs-ride="carousel"
               src="media/palawan2.jpg"
               style="height: 200px;"
               class="card-img-top"
-              alt="Storm Clouds"
+              alt="Rockies in Palawan"
             />
             <div class="card-body">
               <h5 class="card-title">Puerto Princesa</h5>
@@ -181,7 +181,7 @@ data-bs-ride="carousel"
               src="images/pulag7.jpg"
               style="height: 200px;"
               class="card-img-top"
-              alt="Hot Air Balloons"
+              alt="Mountain Ranges"
             />
             <div class="card-body">
               <h5 class="card-title">Mt. Pulag National Park</h5>
