--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,8 @@
       </section>
       <section id="blog-featured">
         <div class="post_featured">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30888.84789296241!2d121.21090914999999!3d14.593036049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m3!3e6!4m0!4m0!5e0!3m2!1sen!2sph!4v1676079102055!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div class="map-responsive" id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30888.84789296241!2d121.21090914999999!3d14.593036049999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m3!3e6!4m0!4m0!5e0!3m2!1sen!2sph!4v1676079102055!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
           <div class="post_featured__details">
           <h2 class="featured-details__title"> Find your next Tourist destination</h2>
           <a class="post-card__avatar" href="#">
@@ -44,7 +45,7 @@
         </div>
       </div>
       </section>
-
+    </div>
            <!-- Carousel wrapper -->
 <div
 id="carouselMultiItemExample"
@@ -312,7 +313,7 @@ data-bs-ride="carousel"
             }(document, 'script', 'facebook-jssdk'));
           </script>
 
-         
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="script.min.js"></script>
