modified:   gallery.html 	modified:   script.min.js

--- a/gallery.html
+++ b/gallery.html
@@ -269,7 +269,7 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-                        <h5 class="card-title">Mt. Daraitan Adventure Camp</h5><br>
+                        <h5 class="card-title">Mt. Daraitan Adventure Camp</h5>
                         <a href="post5.html" class="btn btn-primary">Read</a>
                       </div>
                     </div>
@@ -309,7 +309,7 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-                        <h5 class="card-title">The Islas De Gigantes, Iloilo</h5><br>
+                        <h5 class="card-title">The Islas De Gigantes, Iloilo</h5>
                         <a href="post6.html" class="btn btn-primary">Read</a>
                       </div>
                     </div>
