modified:   About.html 	modified:   gallery.html 	modified:   post.html 	modified:   post2.html 	modified:   post3.html 	modified:   post4.html 	modified:   post5.html 	modified:   post6.html

--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-12">
-                    <h1 class="mb-4 text-center">Life begins at the end of your comfort zone.<br><br>The greatest adventure is what lies ahead.</h1>
+                    <h1 class="mb-1 text-center">Life begins at the end of your comfort zone.<br><br>The greatest adventure is what lies ahead.</h1>
                 </div>
             </div>
         </div>
@@ -317,6 +317,9 @@
             </div>
         </div>
         <input type="button" class="btn btn-outline-success me-2" value="Back" onclick="goBack()">
+        <!-- Back to Top -->
+        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
         <footer>
             <div class="container_wrapper">
               <div id="footer__site_description">
@@ -334,7 +337,15 @@
                   <li><a href="https://facebook.com/gopilipinasadventurista/"><i class="fa fa-facebook-square"></i>GoPilipinasAdventurista</a></li>
                   <li><a href="#"><i class="fa fa-envelope"></i>gopilipinasadventurista@gmail.com</a></li>
                 </ul>
-      
+                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
+                <div class="w-100">
+                    <div class="input-group">
+                        <input type="text" class="form-control border-light" style="padding: 7px;" placeholder="Your Email">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary px-4">Sign Up</button>
+                        </div>
+                    </div>
+                </div>
             </div>
           </footer>
           
