--- a/post4.html
+++ b/post4.html
@@ -142,6 +142,9 @@
       </section>
     </div>
     <input type="button" class="btn btn-outline-success me-2" value="Back" onclick="goBack()">
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
     <footer>
       <div class="container_wrapper">
         <div id="footer__site_description">
