--- a/blog.html
+++ b/blog.html
@@ -262,6 +262,9 @@ data-bs-ride="carousel"
       </section> 
       </div>
     <input type="button" class="btn btn-outline-success me-2" value="Back" onclick="goBack()">
+    <!-- Back to Top -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
     <footer>
       <div class="container_wrapper">
         <div id="footer__site_description">
@@ -279,7 +282,15 @@ data-bs-ride="carousel"
             <li><a href="https://facebook.com/gopilipinasadventurista/"><i class="fa fa-facebook-square"></i>GoPilipinasAdventurista</a></li>
             <li><a href="#"><i class="fa fa-envelope"></i>gopilipinasadventurista@gmail.com</a></li>
           </ul>
-
+          <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
+                <div class="w-100">
+                    <div class="input-group">
+                        <input type="text" class="form-control border-light" style="padding: 8px;" placeholder="Your Email">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary px-4">Sign Up</button>
+                        </div>
+                    </div>
+                </div>
       </div>
     </footer>
           <!-- Messenger Chat Plugin Code -->
